# japanese-celeb-dataset

./: .gitignore  .kaggleignore  README.md  data.csv  dataset-metadata.sample.json  dataset_upload.py  format.py  is_ppl.py  nb.py  project.toml  pyproject.toml  requirements.txt
data/: wiki_category_page.csv  wiki_sub_category.csv
wiki_scrape/: cli.py  data.csv  format.py  scrapy.cfg
wiki_scrape/data/: data.py  exclude.py  has_no_sex_category.csv  infobox.csv  noprefix.csv  person_page.csv  tree.txt  wiki.py  wiki_sub_category.csv  wiki_sub_category_female.csv  wiki_sub_category_male.csv  wiki_sub_category_processed.csv
wiki_scrape/scripts/: auth.py  cli.py  data.py  format.py
wiki_scrape/wiki_scrape/: items.py  middlewares.py  pipelines.py  settings.py
wiki_scrape/wiki_scrape/spiders/: person_page.py  wiki_category.py  wiki_category_page.py
