[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki_name_scraper"
version = "0.1.0"
authors = [{ name = "Ren Toda", email = "renpetertoda8@gmail.com" }]
description = "recursive crawler that scrape names from wiki"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "plotly",
    "scrapy",
    "mwclient",
    "pandas",
    "mwparserfromhell",
    "namedivider-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wiki_scrape*"]

[project.scripts]
wiki-scrape = "wiki_scrape.cli:main"
